Fix for bug 21647. r=harishd.  The expat tokenizer was keeping static state and clobbering it because multiple instances of it were running at the same time.  It no longer uses static state but sets the state as user data on the expat parser and gets it back as a parameter in the callbacks from the parser.  Placing chrome.rdf files in the locale directory of chrome no longer results in huge windows with no content.